--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <section id="streetwear">
             <h2><b>Streetwear</b></h2>
             <div class="product-container">
-                <img src="https://ae01.alicdn.com/kf/Scd0b2a41c5814d4cab9421769a6a4a56F/Camisetas-masculinas-com-estampa-do-drag-o-engra-ado-streetwear-grande-gola-redonda-tops-de-manga.jpg" alt="Roupas streetwear na Loja Apollo">
+                <img src="https://i.etsystatic.com/30352475/r/il/eab898/3213226928/il_1588xN.3213226928_4n7c.jpg" alt="Roupas streetwear na Loja Apollo">
                 <p><b>Produtos de alta qualidade para deixar sua Streetwear mais aconchegante e moderna.</b></p>
                 <a href="streetwear.html" class="btn" onclick="showLoading('streetwear.html')"><b>Ver mais</b></a>
             </div>
@@ -287,7 +287,7 @@
         <select id="musicSelector">
             <option value="Dark Red.mp3"><b>Dark Red</b></option>
             <option value="NEW MAGIC WAND.mp3"><b>New Magic Wand</b></option>
-            <option value="SHE.mp3"><b>She - Tyler</b></option>
+            <option value="She.mp3"><b>She - Tyler</b></option>
             <option value="Pity - Me Adora.mp3"><b>Me Adora - Pitty</b></option>
             <option value="Hells Bells (1).mp3"><b>Hells Bells - ACDC</b></option>
             <option value="WIU - Coração de Gelo.mp3"><b>Coração de Gelo - Wiu</b></option>
