--- a/moda.html
+++ b/moda.html
@@ -363,7 +363,7 @@
     <select id="musicSelector">
         <option value="Dark Red.mp3">Dark Red</option>
         <option value="NEW MAGIC WAND.mp3">New Magic Wand</option>
-        <option value="SHE.mp3">She - Tyler</option>
+        <option value="She.mp3">She - Tyler</option>
         <option value="Pity - Me Adora.mp3">Me Adora - Pitty</option>
         <option value="Hells Bells (1).mp3">Hells Bells - ACDC</option>
         <option value="WIU - Coração de Gelo.mp3">Coração de Gelo - Wiu</option>
