--- a/indexreal.html
+++ b/indexreal.html
@@ -9,12 +9,14 @@
     <title>Loja Apollo</title>
     <link rel="icon" href="favicon.ico" type="image/icon">
 
+    <script src="js/disable-devtool.js"></script>
+
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: url('fundoroxo.png') no-repeat center center fixed;
+            background: url('fundo1.png') no-repeat center center fixed;
             background-size: cover;
             color: #fff;
             display: flex;
